[gd_scene load_steps=24 format=1]

[ext_resource path="res://src/start/start.gd" type="Script" id=1]
[ext_resource path="res://art/StartScreen_crop.png" type="Texture" id=2]
[ext_resource path="res://art/fonts/yanone.fnt" type="BitmapFont" id=3]
[ext_resource path="res://art/medium/sprite_02.png" type="Texture" id=4]
[ext_resource path="res://art/medium/sprite_01.png" type="Texture" id=5]
[ext_resource path="res://art/medium/sprite_02_1.png" type="Texture" id=6]
[ext_resource path="res://art/medium/sprite_01_1.png" type="Texture" id=7]
[ext_resource path="res://art/medium/sprite_03.png" type="Texture" id=8]
[ext_resource path="res://art/sprites/key_3.png" type="Texture" id=9]
[ext_resource path="res://art/sprites/lock_big.png" type="Texture" id=10]
[ext_resource path="res://art/sprites/whirl_black.png" type="Texture" id=11]
[ext_resource path="res://art/sprites/btn_settings.png" type="Texture" id=12]
[ext_resource path="res://src/start/settings.tscn" type="PackedScene" id=13]
[ext_resource path="res://art/material_black.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, -68.0426, 243.677, -87.4409, -56.3764, 89.742, 97.7957, -15.9393, 397.722, -65.5807, 17.2581, 108.151, -39.1183, 167.893, 368.901, 0, 0, 44.871, 39.1183, 329.528, 393.191, 0, 0, 113.903, 42.5699, 402.02, 465.683, 0, 0, 6.90323, -109.301, 549.872, 434.481, 0, 0, 0, 0, 697.14, 375.804, 0, 0, 50.6237, 37.9678, 813.183, 439.631, -60.9785, -70.1828, 41.4194, 19.5591, 917.389, 568.757, -24.1613, 40.2688, 87.4409, -46.0215, 1062.37, 564.226, 0, 0, 0, 0, 1113.64, 494.309, 51.7742, 41.4194, -67.8817, -98.9463, 1035.4, 325.18, 0, 0, -121.957, 27.6129, 852.463, 261.901, 0, 0, -73.6344, -151.871, 671.598, 223.289, 0, 0, -224.355, 101.247, 490.369, 156.461, 0, 0, 73.6344, -78.2366, 396.85, 28.3415, 0, 0, -200.194, -12.6559, 238.914, -49.6869, 0, 0, 0, 0, 71.2477, -31.4865, 0, 0, 0, 0, -8.01056, 98.6942, 0, 0, 0, 0, -70.308, 241.412 )
}

[sub_resource type="Animation" id=3]

resource/name = "snake"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]

resource/name = "snake2"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D 2/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Curve2D" id=5]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 167.637, 58.8994, 478.92, 557.94, 0, 0, -7.92876, -82.6857, 614.841, 391.436, 0, 0, -115.533, -81.553, 470.991, 227.197, 0, 0, 84.951, -29.4497, 594.453, 65.2241, 0, 0, 91.7471, 28.317, 818.724, 65.2241, 0, 0, 0, 0, 902.542, 196.615, 0, 0, -21.5209, 55.5013, 873.092, 364.252, 0, 0, -124.595, -9.06144, 764.355, 467.326, 0, 0, -129.126, -148.381, 630.699, 258.912, 112.135, -46.4399, -121.197, 95.1452, 401.897, 381.242, 129.126, 19.2556, -192.556, -105.339, 253.516, 142.246, 0, 0, 19.2556, 80.4203, 102.87, 281.566, 0, 0, 0, 173.3, 75.6853, 539.817, 0, 0, 64.5628, -125.728, 278.435, 493.377, -39.6438, 61.1647, 49.8379, 0, 623.903, 501.306, -99.6759, -43.0419, 96.2778, 12.4595, 896.879, 516.031, -158.575, -5.6634, 95.1452, 47.5726, 1129.08, 663.279, 0, 0, -56.634, -166.504, 1155.13, 320.077, 0, 0, 0, 0, 765.488, 292.893, 0, -33.9804, -63.4301, 30.5824, 472.123, 429.947, 0, 0, 0, 0, 478.92, 557.94 )
}

[sub_resource type="Curve2D" id=6]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, -124.119, -27.219, 537.13, 42.9842, 8.71008, -92.5447, -83.8346, 99.0772, 247.519, 152.949, 31.5741, -114.32, -67.5032, 106.699, 512.088, 265.091, 0, 0, -97.9885, 1.08876, 96.1816, 344.571, -84.9233, -126.296, 162.225, 29.3965, 86.3828, 550.347, 0, 0, 194.888, -68.5919, 307.401, 478.488, 0, 0, -88.1896, -118.675, 166.951, 220.452, 0, 0, 132.829, -89.2784, 515.354, 162.748, -201.421, -47.9055, 153.515, 8.71008, 568.704, 621.116, 0, 0, 88.1896, -86.0121, 722.219, 367.435, -117.586, -3.26628, 166.58, 53.3493, 960.658, 536.193, 0, 0, 52.2605, -108.876, 1005.3, 393.565, 0, 0, -107.787, -77.302, 838.716, 267.269, 0, 0, -112.142, 2.17752, 640.562, 305.376, -112.142, 93.6334, 31.5741, -48.9942, 698.266, 76.7358, -93.6334, -65.3256, 101.255, -6.53256, 1103.29, 74.5583, 0, 0, 0, 0, 1177.32, 341.305, 91.4559, -14.1539, -178.557, 35.9291, 1174.05, 641.803, 0, 0, 0, 0, 763.592, 501.352, 0, 0, -170.935, -21.7752, 439.141, 404.453, 0, 0, 0, 0, 537.13, 42.9842 )
}

[sub_resource type="Animation" id=7]

resource/name = "snake3"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D 3/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]

resource/name = "whirl"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("whirl:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 40, 40 )

[node name="start" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="ui" type="Container" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 960.0
__meta__ = {
"_edit_lock_": true
}

[node name="btn_start" type="TextureButton" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 129.0
margin/top = 771.0
margin/right = 540.0
margin/bottom = 919.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="btn_settings" type="TextureButton" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1055.0
margin/top = 542.0
margin/right = 1167.0
margin/bottom = 648.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="tbtn_start" type="TouchScreenButton" parent="ui"]

transform/pos = Vector2( 307.81, 834.081 )
transform/scale = Vector2( 49.3673, 17.4769 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1

[node name="start_in" type="Label" parent="ui"]

visibility/visible = false
rect/scale = Vector2( 1.2, 1.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 163.0
margin/top = 395.0
margin/right = 586.0
margin/bottom = 457.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0665283, 0.0763416, 0.15625, 1 )
text = "Start in 3 seconds"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Path2D" type="Path2D" parent="ui"]

editor/display_folded = true
transform/pos = Vector2( 138.065, 105.85 )
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="ui/Path2D"]

transform/pos = Vector2( 771.577, 416.747 )
transform/rot = -28.8126
offset = 1108.4
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="ui/Path2D/PathFollow2D"]

texture = ExtResource( 4 )

[node name="Sprite1" type="Sprite" parent="ui/Path2D/PathFollow2D"]

transform/pos = Vector2( -63.446, 0.058609 )
texture = ExtResource( 5 )

[node name="animation" type="AnimationPlayer" parent="ui"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/snake = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "snake"

[node name="animation1" type="AnimationPlayer" parent="ui"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/snake2 = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "snake2"

[node name="Path2D 2" type="Path2D" parent="ui"]

editor/display_folded = true
z/z = 1
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="ui/Path2D 2"]

transform/pos = Vector2( 479.332, 558.081 )
transform/rot = -18.7656
offset = 5483.28
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite2 2" type="Sprite" parent="ui/Path2D 2/PathFollow2D"]

texture = ExtResource( 6 )

[node name="Sprite23" type="Sprite" parent="ui/Path2D 2/PathFollow2D"]

transform/pos = Vector2( -61.6736, 0.701752 )
texture = ExtResource( 7 )

[node name="Path2D 3" type="Path2D" parent="ui"]

editor/display_folded = true
z/z = 1
curve = SubResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="ui/Path2D 3"]

transform/pos = Vector2( 838.87, 550.862 )
transform/rot = 149.268
offset = 6049.92
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="ui/Path2D 3/PathFollow2D"]

texture = ExtResource( 6 )

[node name="Sprite1" type="Sprite" parent="ui/Path2D 3/PathFollow2D"]

transform/pos = Vector2( -62.0626, 0.891251 )
texture = ExtResource( 7 )

[node name="animation2" type="AnimationPlayer" parent="ui"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/snake3 = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "snake3"

[node name="Particles2D" type="Particles2D" parent="ui"]

transform/pos = Vector2( 641.252, 766.417 )
z/z = 2
config/amount = 10
config/lifetime = 6.0
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 8 )
params/direction = 180.0
params/spread = 60.0
params/linear_velocity = 800.0
params/spin_velocity = 6.0
params/orbit_velocity = 1.0
params/gravity_direction = 0.0
params/gravity_strength = 400.0
params/radial_accel = 66.62
params/tangential_accel = 6.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="Particles2D1" type="Particles2D" parent="ui"]

transform/pos = Vector2( 1054.98, 766.417 )
z/z = 2
config/amount = 9
config/lifetime = 6.0
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 8 )
params/direction = 180.0
params/spread = 60.0
params/linear_velocity = 800.0
params/spin_velocity = -6.0
params/orbit_velocity = -1.0
params/gravity_direction = 0.0
params/gravity_strength = 300.0
params/radial_accel = 0.0
params/tangential_accel = 6.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="Particles2D2" type="Particles2D" parent="ui"]

transform/pos = Vector2( 211.192, 722.867 )
z/z = 2
config/amount = 8
config/lifetime = 6.0
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 8 )
params/direction = 180.0
params/spread = 60.0
params/linear_velocity = 800.0
params/spin_velocity = 3.0
params/orbit_velocity = 0.5
params/gravity_direction = 0.0
params/gravity_strength = 350.0
params/radial_accel = 0.0
params/tangential_accel = 6.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="Particles2D3" type="Particles2D" parent="ui"]

transform/pos = Vector2( 655.406, 609.636 )
z/z = 2
config/amount = 2
config/lifetime = 6.0
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 9 )
params/direction = 180.0
params/spread = 60.0
params/linear_velocity = 800.0
params/spin_velocity = 3.0
params/orbit_velocity = 0.5
params/gravity_direction = 0.0
params/gravity_strength = 350.0
params/radial_accel = 0.0
params/tangential_accel = 6.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="lock" type="Sprite" parent="ui"]

transform/pos = Vector2( 914.559, 272.19 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="whirl" type="Sprite" parent="ui"]

transform/pos = Vector2( 1127.96, 77.302 )
transform/rot = 360.0
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="animation3" type="AnimationPlayer" parent="ui"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/whirl = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "whirl"

[node name="tbtn_settings" type="TouchScreenButton" parent="ui"]

transform/pos = Vector2( 1063.05, 545.605 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 12 )
pressed = null
bitmask = null
shape = SubResource( 9 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="settings" parent="ui" instance=ExtResource( 13 )]

visibility/visible = false
transform/pos = Vector2( 381.115, 235.32 )
z/z = 1000

[node name="autostart" type="Timer" parent="."]

process_mode = 1
wait_time = 180.0
one_shot = true
autostart = true

[node name="border_left" type="Node2D" parent="."]

visibility/visible = false
z/z = 4000

[node name="Sprite" type="Sprite" parent="border_left"]

texture = ExtResource( 14 )
modulate = Color( 0.816406, 0.137131, 0.137131, 1 )

[node name="border_right" type="Node2D" parent="."]

visibility/visible = false
z/z = 4000

[node name="Sprite" type="Sprite" parent="border_right"]

texture = ExtResource( 14 )
modulate = Color( 0.816406, 0.137131, 0.137131, 1 )

[connection signal="pressed" from="ui/btn_start" to="." method="_on_button_pressed"]

[connection signal="pressed" from="ui/tbtn_start" to="." method="_on_tbtn_start_pressed"]

[connection signal="finished" from="ui/animation" to="." method="_on_animation_finished"]

[connection signal="finished" from="ui/animation1" to="." method="_on_animation1_finished"]

[connection signal="finished" from="ui/animation2" to="." method="_on_animation2_finished"]

[connection signal="finished" from="ui/animation3" to="." method="_on_animation3_finished"]

[connection signal="pressed" from="ui/tbtn_settings" to="." method="_on_btn_settings_pressed"]

[connection signal="changed" from="ui/settings" to="." method="_on_settings_changed"]

[connection signal="timeout" from="autostart" to="." method="_on_autostart_timeout"]


